Wed Jan 15 20:15:31 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-manager.c (gnome_theme_manager_tree_sort_func): 
	remove this unneeded sort func.

	* gnome-theme-details.c (setup_tree_view): use the right sort
	function.

2003-01-14  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : yet another place to
	handle NULL window manager.

2003-01-14  Alex Duggan  <aldug@gnome.org>
	
	* gnome-theme-manager.c (main): 
	s/gnome-theme-properties/gnome-theme-manager/  Fixes #103525

Tue Jan 14 02:16:22 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (load_meta_themes): set the correct row to
	the new data.  This was messing a lot up.  Saving now works, so
	long as you don't type bad data.

	* TODO: update.

2003-01-13  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : handle yet another place
	  where gnome_wm_manager_get_current may be NULL.

Mon Jan 13 15:20:17 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-manager.c (main): gnome_theme_init ()

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Makefile.am (EXTRA_DIST) : dist the pixmaps too.

2003-01-08  Anders Carlsson  <andersca@codefactory.se>

	* gnome-theme-manager.c: (update_font_button_state),
	(font_key_changed), (apply_font_clicked), (setup_dialog):
	* gnome-theme-manager.h:
	Add support for applying fonts.
	
	* theme-thumbnail.c: (create_image):
	Allow SVG files as icons.
	
2003-01-08  Jody Goldberg <jody@gnome.org>

	* gnome-theme-details.c (gnome_theme_details_update_from_gconf) :
	  handle lack of metacity.
	(window_theme_selection_changed) : ditto.
	(gnome_theme_details_reread_themes_from_disk) : ditto.

Wed Jan  8 01:57:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (add_initial_row_to_meta_theme): handle
	initial theme as custom.

	* TODO: update

Tue Jan  7 03:10:36 2003  Jonathan Blandford  <jrb@gnome.org>
